--- a/20191COM0007_Nasscom_mini_project.ipynb
+++ b/20191COM0007_Nasscom_mini_project.ipynb
@@ -41,6 +41,25 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "SbVU2EuXhykv"
+      },
+      "source": [
+        "**Linear Regression is a machine learning algorithm based on supervised learning. It performs a regression task. Regression models a target prediction value based on independent variables. It is mostly used for finding out the relationship between variables and forecasting. Different regression models differ based on – the kind of relationship between dependent and independent variables, they are considering and the number of independent variables being used.**\n",
+        "\n",
+        "**Linear regression performs the task to predict a dependent variable value (y) based on a given independent variable (x). So, this regression technique finds out a linear relationship between x (input) and y(output). Hence, the name is Linear Regression.**\n",
+        "\n",
+        "**Types of Linear Regression**\n",
+        "**Linear regression can be further divided into two types of the algorithm:**\n",
+        "\n",
+        "**Simple Linear Regression: If a single independent variable is used to predict the value of a numerical dependent variable, then such a Linear Regression algorithm is called Simple Linear Regression.**\n",
+        "\n",
+        "**Multiple Linear regression: If more than one independent variable is used to predict the value of a numerical dependent variable, then such a Linear Regression algorithm is called Multiple Linear Regression.**\n",
+        "          \n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "YxfLz5Am84Lk"
       },
       "source": [
