--- a/20191COM0007_Nasscom_mini_project.ipynb
+++ b/20191COM0007_Nasscom_mini_project.ipynb
@@ -31,11 +31,11 @@
         "id": "OZqy6_8cfloo"
       },
       "source": [
-        "#**NAME: Amrutha S**\n",
+        "#**Name: Amrutha S**\n",
         "\n",
-        "#**ROLL NO:20191COM0007**\n",
+        "#**Roll No: 20191COM0007**\n",
         "\n",
-        "#**SECTION: 5COM1** "
+        "#**Section: 5COM1** "
       ]
     },
     {
